jump link fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@
 }
 
 .skillHeader {
-    margin: 3% 0 1% 0;
+    margin: 4% 0 1% 0;
     font-size: 20px;
 }
 
